--- a/notebooks/premier_league_raw_data_preview.ipynb
+++ b/notebooks/premier_league_raw_data_preview.ipynb
@@ -4,15 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Users/marcin/dev/football-predictions\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "import os\n",
@@ -21,8 +13,7 @@
     "# Add the project root to the Python path\n",
     "project_root = os.path.abspath(os.path.join(os.getcwd(), '..'))\n",
     "if project_root not in sys.path:\n",
-    "    sys.path.append(project_root)\n",
-    "print(project_root)"
+    "    sys.path.append(project_root)"
    ]
   },
   {
